{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 37,
  "lineage": "9ddde30c-137a-8c03-2a93-4e94505012a0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eigw-0e7e2e5c1b8b232a1",
            "vpc_id": "vpc-03c79163b225ea253"
          },
          "dependencies": [
            "aws_vpc.vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09240a0a5be99dd82",
            "association_id": "eipassoc-0ec40f00569f5c8cc",
            "domain": "vpc",
            "id": "eipalloc-09240a0a5be99dd82",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0c602910a06f55ffd",
            "private_dns": "ip-10-0-0-64.eu-west-1.compute.internal",
            "private_ip": "10.0.0.64",
            "public_dns": "ec2-52-19-237-235.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.19.237.235",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastian",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ca3fed11864d6bb",
            "arn": "arn:aws:ec2:eu-west-1:905029474260:instance/i-01f0663fdc2e94695",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01f0663fdc2e94695",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-pair-01",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-02adec83db32d21ac"
              }
            ],
            "primary_network_interface_id": "eni-02adec83db32d21ac",
            "private_dns": "ip-10-0-0-50.eu-west-1.compute.internal",
            "private_ip": "10.0.0.50",
            "public_ip": "34.245.62.106",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b73d2ab946f9f232",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03e6b6e47c8d762e5",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03f3997e73896fef5"
            ]
          },
          "dependencies": [
            "aws_network_interface.nic",
            "aws_security_group.sgr-ssh",
            "aws_subnet.pub-subnet-01",
            "aws_vpc.vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ca3fed11864d6bb",
            "arn": "arn:aws:ec2:eu-west-1:905029474260:instance/i-06960dba5f8363f93",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06960dba5f8363f93",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-pair-01",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0690bf56e46335e5e"
              }
            ],
            "primary_network_interface_id": "eni-0690bf56e46335e5e",
            "private_dns": "ip-10-0-1-20.eu-west-1.compute.internal",
            "private_ip": "10.0.1.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b9b640926cfc2aa0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07ca91a6d1fd93f03",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04be57d33622c662e"
            ]
          },
          "dependencies": [
            "aws_network_interface.nic-ec2",
            "aws_security_group.sgr-ssh-8000",
            "aws_subnet.private-subnet-01",
            "aws_vpc.vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:905029474260:internet-gateway/igw-0aa1dfbca29d6e0c6",
            "id": "igw-0aa1dfbca29d6e0c6",
            "owner_id": "905029474260",
            "tags": {
              "Name": "igw-01"
            },
            "tags_all": {
              "Name": "igw-01"
            },
            "vpc_id": "vpc-03c79163b225ea253"
          },
          "dependencies": [
            "aws_vpc.vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09240a0a5be99dd82",
            "connectivity_type": "public",
            "id": "nat-0c9e247b92ce234be",
            "network_interface_id": "eni-0c602910a06f55ffd",
            "private_ip": "10.0.0.64",
            "public_ip": "52.19.237.235",
            "subnet_id": "subnet-03e6b6e47c8d762e5",
            "tags": {
              "Name": "nat-gw"
            },
            "tags_all": {
              "Name": "nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.nateIP",
            "aws_internet_gateway.igw-01",
            "aws_subnet.pub-subnet-01",
            "aws_vpc.vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:905029474260:network-interface/eni-02adec83db32d21ac",
            "attachment": [
              {
                "attachment_id": "eni-attach-00db93c11cfd63741",
                "device_index": 0,
                "instance": "i-01f0663fdc2e94695"
              }
            ],
            "id": "eni-02adec83db32d21ac",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:99:c2:4d:a7:8d",
            "owner_id": "905029474260",
            "private_ip": "10.0.0.50",
            "private_ip_list": [
              "10.0.0.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.0.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-03f3997e73896fef5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03e6b6e47c8d762e5"
          },
          "dependencies": [
            "aws_security_group.sgr-ssh",
            "aws_subnet.pub-subnet-01",
            "aws_vpc.vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "nic-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:905029474260:network-interface/eni-0690bf56e46335e5e",
            "attachment": [
              {
                "attachment_id": "eni-attach-09d0882ee62b7862c",
                "device_index": 0,
                "instance": "i-06960dba5f8363f93"
              }
            ],
            "id": "eni-0690bf56e46335e5e",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:45:40:7a:63:09",
            "owner_id": "905029474260",
            "private_ip": "10.0.1.20",
            "private_ip_list": [
              "10.0.1.20"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.20"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-04be57d33622c662e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07ca91a6d1fd93f03"
          },
          "dependencies": [
            "aws_security_group.sgr-ssh-8000",
            "aws_subnet.private-subnet-01",
            "aws_vpc.vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:905029474260:route-table/rtb-0af97fb0e2ba7cd7a",
            "id": "rtb-0af97fb0e2ba7cd7a",
            "owner_id": "905029474260",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "eigw-0e7e2e5c1b8b232a1",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aa1dfbca29d6e0c6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-01"
            },
            "tags_all": {
              "Name": "route-01"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c79163b225ea253"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_egress_only_internet_gateway.egress",
            "aws_internet_gateway.igw-01",
            "aws_vpc.vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:905029474260:route-table/rtb-074c8b70729d5069f",
            "id": "rtb-074c8b70729d5069f",
            "owner_id": "905029474260",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "eigw-0e7e2e5c1b8b232a1",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-02"
            },
            "tags_all": {
              "Name": "route-02"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c79163b225ea253"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_egress_only_internet_gateway.egress",
            "aws_vpc.vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d0ce2f906ecf9724",
            "route_table_id": "rtb-0af97fb0e2ba7cd7a",
            "subnet_id": "subnet-03e6b6e47c8d762e5"
          },
          "dependencies": [
            "aws_egress_only_internet_gateway.egress",
            "aws_internet_gateway.igw-01",
            "aws_route_table.route-01",
            "aws_subnet.pub-subnet-01",
            "aws_vpc.vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08802eccf098edd83",
            "route_table_id": "rtb-0af97fb0e2ba7cd7a",
            "subnet_id": "subnet-0a4a1e2677b437e5e"
          },
          "dependencies": [
            "aws_egress_only_internet_gateway.egress",
            "aws_internet_gateway.igw-01",
            "aws_route_table.route-01",
            "aws_subnet.pub-subnet-02",
            "aws_vpc.vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052f0124f9d8725ef",
            "route_table_id": "rtb-074c8b70729d5069f",
            "subnet_id": "subnet-07ca91a6d1fd93f03"
          },
          "dependencies": [
            "aws_egress_only_internet_gateway.egress",
            "aws_route_table.route-02",
            "aws_subnet.private-subnet-01",
            "aws_vpc.vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgr-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:905029474260:security-group/sg-03f3997e73896fef5",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-03f3997e73896fef5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_for_all",
            "name_prefix": "",
            "owner_id": "905029474260",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sgr-ssh"
            },
            "tags_all": {
              "Name": "sgr-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c79163b225ea253"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgr-ssh-8000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:905029474260:security-group/sg-04be57d33622c662e",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "id": "sg-04be57d33622c662e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "ssh from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "905029474260",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sgr-ssh-8000"
            },
            "tags_all": {
              "Name": "sgr-ssh-8000"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c79163b225ea253"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:905029474260:subnet/subnet-07ca91a6d1fd93f03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ca91a6d1fd93f03",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905029474260",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet-01"
            },
            "tags_all": {
              "Name": "pub-subnet-01"
            },
            "vpc_id": "vpc-03c79163b225ea253"
          },
          "dependencies": [
            "aws_vpc.vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:905029474260:subnet/subnet-046415158d00da45d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046415158d00da45d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905029474260",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet-02"
            },
            "tags_all": {
              "Name": "pub-subnet-02"
            },
            "vpc_id": "vpc-03c79163b225ea253"
          },
          "dependencies": [
            "aws_vpc.vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-subnet-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:905029474260:subnet/subnet-03e6b6e47c8d762e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e6b6e47c8d762e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905029474260",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet-01"
            },
            "tags_all": {
              "Name": "pub-subnet-01"
            },
            "vpc_id": "vpc-03c79163b225ea253"
          },
          "dependencies": [
            "aws_vpc.vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-subnet-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:905029474260:subnet/subnet-0a4a1e2677b437e5e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a4a1e2677b437e5e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905029474260",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet-02"
            },
            "tags_all": {
              "Name": "pub-subnet-02"
            },
            "vpc_id": "vpc-03c79163b225ea253"
          },
          "dependencies": [
            "aws_vpc.vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:905029474260:vpc/vpc-03c79163b225ea253",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-088a569385588b0fb",
            "default_route_table_id": "rtb-0ade274f62c4cf9ea",
            "default_security_group_id": "sg-052d6fe8f950fb72d",
            "dhcp_options_id": "dopt-0d531b6bd7b188cce",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-03c79163b225ea253",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ade274f62c4cf9ea",
            "owner_id": "905029474260",
            "tags": {
              "Name": "vpc-01"
            },
            "tags_all": {
              "Name": "vpc-01"
            }
          }
        }
      ]
    }
  ]
}